# ga-scheduler

./: CMakeLists.txt  README.md  main.cpp
data/: stationInfo.csv  taskInfo.csv  workerInfo.csv
include/: Chromosome.h  GA.h  Position.hpp  Station.h  StationNode.h  Task.h  Worker.h  constant_param.h  data_reader.h  gene.h  io_utils.h  params.h
src/: Chromosome.cpp  GA.cpp  Station.cpp  StationNode.cpp  Task.cpp  Worker.cpp  data_reader.cpp  gene.cpp  io_utils.cpp
